--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,34 @@ img {
     height: 40px;
 }
 
+.container { 
+    margin-left: 10px;
+}
+
 .btn { 
     width: 70px;
     height: 70px;
     outline: none;
     background-color:  transparent;
+}
 
+.directions {
+    color: darkgreen;
+}
+
+.target {
+    float: left;
+    width: 250px;
+    /* background-color: blueviolet; */
+}
+
+.score {
+    /* width: 200px; */
+    /* background-color: aqua; */
+}
+
+.current {
+    clear: both;
+    width: 250px;
+    /* background-color: cadetblue; */
 }
